--- a/pdf-reader.html
+++ b/pdf-reader.html
@@ -2,109 +2,29 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PDF Reader | Usul ad-Deen</title>
-
-  <!-- pdf.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
-
-  <!-- Firebase initialisieren -->
-  <script type="module" src="firebase-init.js"></script>
-  <script type="module" src="pdf-reader.js" defer></script>
-
-  <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background: #f9f9f9;
-      color: #222;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      transition: background 0.3s, color 0.3s;
-    }
-
-    body.dark {
-      background: #1c1c1c;
-      color: #ddd;
-    }
-
-    #controls {
-      position: sticky;
-      top: 0;
-      background: #fff;
-      color: #000;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 8px;
-      padding: 12px;
-      width: 100%;
-      z-index: 100;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-
-    body.dark #controls {
-      background: #333;
-      color: #fff;
-    }
-
-    button {
-      padding: 8px 12px;
-      font-size: 16px;
-      border: none;
-      border-radius: 4px;
-      background: #4a90e2;
-      color: white;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
-
-    button:hover {
-      background: #3578c8;
-    }
-
-    canvas {
-      width: 100% !important;
-      height: auto !important;
-      max-width: 100vw;
-      background: white;
-      box-shadow: 0 0 8px rgba(0,0,0,0.2);
-      margin: 10px 0;
-    }
-
-    #fortschritt {
-      font-weight: bold;
-      margin-top: 5px;
-    }
-
-    @media (max-width: 600px) {
-      button {
-        font-size: 14px;
-        padding: 6px 10px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="pdf-reader.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+  <script defer src="pdf-reader.js"></script>
 </head>
 <body>
 
-  <div id="controls">
-    <button onclick="zurueckZurListe()">📚 Zurück zur Bücherauswahl</button>
-    <button onclick="zurueck()">⬅️ Zurück</button>
-    <button onclick="weiter()">➡️ Weiter</button>
-    <button onclick="zoomOut()">➖ Zoom -</button>
-    <button onclick="zoomIn()">➕ Zoom +</button>
-    <button onclick="toggleDarkMode()">🌓 Dark Mode</button>
+<div id="controls">
+  <button onclick="zurueck()">⬅️ Zurück</button>
+  <span id="fortschritt">Fortschritt: 0%</span>
+  <div>
+    <button onclick="zoomOut()">➖ Zoom</button>
+    <button onclick="zoomIn()">➕ Zoom</button>
+    <button onclick="setzeLesezeichen()">🔖 Lesezeichen</button>
+    <button onclick="geheZuLesezeichen()">📚 Gehe zu Lesezeichen</button>
+    <button onclick="zurueckZurAuswahl()">📚 Zur Bücherauswahl</button>
   </div>
+</div>
 
+<div id="viewer-container">
   <canvas id="pdf-canvas"></canvas>
-  <div id="fortschritt">Fortschritt: ...</div>
+</div>
 
-  <script>
-    // 🌓 Dark Mode Toggle
-    function toggleDarkMode() {
-      document.body.classList.toggle("dark");
-    }
-  </script>
 </body>
 </html>
