--- a/pdf-reader.html
+++ b/pdf-reader.html
@@ -10,12 +10,12 @@
 </head>
 <body>
 <div id="controls">
-  <button onclick="zurueck()">⬅️ nächste Seite</button>
+  <button onclick="zurueck()">⬅️ vorherige Seite</button>
   <span id="fortschritt">Fortschritt: 0%</span>
   <div>
     <button onclick="zoomOut()">➖ Zoom</button>
     <button onclick="zoomIn()">➕ Zoom</button>
-    <button onclick="weiter()">➡️ vorherige Seite</button>
+    <button onclick="weiter()">➡️ nächste Seite</button>
     <button onclick="setzeLesezeichen()">🔖 Lesezeichen</button>
     <button onclick="geheZuLesezeichen()">🔖 meine Lesezeichen</button>
     <button onclick="zurueckZurAuswahl()">📚 Zur allen Büchern</button>
