--- a/pdf-reader.html
+++ b/pdf-reader.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="de">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- 📱 Mobilgeräte: Optimierte Darstellung + kein Pinch-Zoom -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
   <title>PDF Reader | Usul ad-Deen</title>
   <link rel="stylesheet" href="pdf-reader.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
   <script defer src="pdf-reader.js"></script>
 </head>
+
 <body>
 <div id="controls">
   <button onclick="zurueck()">⬅️ vorherige Seite</button>
