--- a/pdf-reader.html
+++ b/pdf-reader.html
@@ -6,34 +6,27 @@
   <title>PDF Reader | Usul ad-Deen</title>
   <link rel="stylesheet" href="pdf-reader.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
-  <script defer src="pdf-reader.js"></script>
+  <script type="module" src="pdf-reader.js"></script>
 </head>
 <body>
-
-  <!-- 📌 Steuerung -->
   <div id="controls">
-    <button onclick="zurueck()">⬅️ vorherige Seite</button>
-    <span id="fortschritt">Fortschritt: 0%</span>
-    <div>
+    <div class="nav-buttons">
+      <button onclick="zurueck()">⬅️ vorherige Seite</button>
+      <button onclick="weiter()">➡️ nächste Seite</button>
       <button onclick="zoomOut()">➖ Zoom</button>
       <button onclick="zoomIn()">➕ Zoom</button>
-      <button onclick="weiter()">➡️ nächste Seite</button>
-      <button onclick="setzeLesezeichen()">🔖 Lesezeichen</button>
-      <button onclick="geheZuLesezeichen()">🔖 Meine Lesezeichen</button>
+    </div>
+    <span id="fortschritt">Fortschritt: 0%</span>
+    <div class="action-buttons">
+      <button onclick="setzeLesezeichen()">🔖 Lesezeichen setzen</button>
+      <button onclick="zeigeLesezeichen()">🔖 Meine Lesezeichen</button>
       <button onclick="zurueckZurAuswahl()">📚 Zur Bücherauswahl</button>
     </div>
   </div>
 
-  <!-- 📄 PDF-Anzeige -->
   <div id="viewer-container">
     <canvas id="pdf-canvas"></canvas>
+    <div id="lesezeichen-liste" class="lesezeichen-box" hidden></div>
   </div>
-
-  <!-- 🔖 Seitenleiste für Lesezeichen -->
-  <div id="lesezeichen-liste" class="hidden">
-    <h3>📌 Meine Lesezeichen</h3>
-    <ul id="lesezeichen-eintraege"></ul>
-  </div>
-
 </body>
 </html>
