--- a/bücher.html
+++ b/bücher.html
@@ -27,6 +27,16 @@
         <select id="stadt-auswahl"></select>
       </div>
     </div>
+    <!-- Login/Profil-Anzeige oben rechts -->
+<div id="user-status" class="user-info">
+  <a href="login.html" id="login-link">🔐 Login</a>
+  <div id="user-info" class="hidden">
+    <span id="greeting"></span>
+    <a href="profil.html" title="Profil bearbeiten">👤</a>
+    <button onclick="logout()">🚪 Logout</button>
+  </div>
+</div>
+
   </header>
 
   <!-- Navigation -->
