--- a/login.html
+++ b/login.html
@@ -21,6 +21,16 @@
                  <li><a href="login.html">Login</a></li>
             </ul>
         </nav>
+        <!-- Login/Profil-Anzeige oben rechts -->
+<div id="user-status" class="user-info">
+  <a href="login.html" id="login-link">🔐 Login</a>
+  <div id="user-info" class="hidden">
+    <span id="greeting"></span>
+    <a href="profil.html" title="Profil bearbeiten">👤</a>
+    <button onclick="logout()">🚪 Logout</button>
+  </div>
+</div>
+
     </header>
 
     <main>
