--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <span id="current-prayer-countdown" class="nextprayer-bold"></span></p>
     </div>
     </div>
+    
 
      <!-- 📌 Navigationsmenü -->
     <nav class="menu">
@@ -48,6 +49,15 @@
             <li><a href="#" id="dark-mode-toggle">Dark Mode</a></li>
         </ul>
     </nav>
+<!-- Login/Profil-Anzeige oben rechts -->
+<div id="user-status" class="user-info">
+  <a href="login.html" id="login-link">🔐 Login</a>
+  <div id="user-info" class="hidden">
+    <span id="greeting"></span>
+    <a href="profil.html" title="Profil bearbeiten">👤</a>
+    <button onclick="logout()">🚪 Logout</button>
+  </div>
+</div>
 
     <main>
     
