--- a/bücher.html
+++ b/bücher.html
@@ -6,6 +6,7 @@
   <title>Bücher | Usul ad-Deen</title>
   <link rel="stylesheet" href="stylesbuecher.css"/>
   <script defer src="bücher.js"></script>
+  <script type="module" src="auth.js"></script>
 </head>
 <body>
 
