--- a/dua.html
+++ b/dua.html
@@ -6,6 +6,8 @@
     <title>Bittgebete | Usul ad-Deen</title>
     <link rel="stylesheet" href="stylesdua.css">
     <script defer src="dua.js"></script>
+    <script type="module" src="auth.js"></script>
+
 </head>
 <body>
     <header>
