--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="stylesindex.css">
     <link rel="manifest" href="manifest.json">
     <script defer src="script.js"></script>
+    <script type="module" src="auth.js"></script>
+
 </head>
 <body>
 
