--- a/login.html
+++ b/login.html
@@ -6,6 +6,8 @@
     <title>Login | Usul ad-Deen</title>
     <link rel="stylesheet" href="stylesauth.css">
     <script defer src="auth.js"></script>
+    <script type="module" src="auth.js"></script>
+
 </head>
 <body>
     <header>
