--- a/pdf-reader.html
+++ b/pdf-reader.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="pdf-reader.css"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
   <script defer src="pdf-reader.js"></script>
+  <script type="module" src="auth.js"></script>
+
 </head>
 <body>
   <div id="controls">
