--- a/beiträge.html
+++ b/beiträge.html
@@ -6,6 +6,8 @@
     <title>Beiträge | Usul ad-Deen</title>
     <link rel="stylesheet" href="stylesbeitraege.css">
     <script defer src="beiträge.js"></script>
+    <script defer src="script.js"></script>
+
 </head>
 <body>
     <header>
