--- a/bücher.html
+++ b/bücher.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="stylesbuecher.css"/>
   <script defer src="bücher.js"></script>
   <script type="module" src="auth.js"></script>
+  <script defer src="script.js"></script>
+
 </head>
 <body>
 
