--- a/dua.html
+++ b/dua.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="stylesdua.css">
     <script defer src="dua.js"></script>
     <script type="module" src="auth.js"></script>
+    <script defer src="script.js"></script>
+
 
 </head>
 <body>
