--- a/login.html
+++ b/login.html
@@ -6,6 +6,7 @@
     <title>Login | Usul ad-Deen</title>
     <link rel="stylesheet" href="stylesauth.css">
     <script type="module" src="auth.js"></script>
+<script defer src="script.js"></script>
 
 </head>
 <body>
