--- a/profil.html
+++ b/profil.html
@@ -6,6 +6,8 @@
   <title>Dein Profil | Usul ad-Deen</title>
   <link rel="stylesheet" href="stylesbuecher.css"/>
   <script defer src="bücher.js"></script>
+  <script defer src="script.js"></script>
+
   <script type="module" src="auth.js"></script>
 </head>
 <body>
