--- a/register.html
+++ b/register.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registrieren | Usul ad-Deen</title>
     <link rel="stylesheet" href="stylesauth.css">
-  
+  <script defer src="script.js"></script>
+
     <script type="module" src="auth.js"></script>
 
 </head>
