--- a/pdf-reader.html
+++ b/pdf-reader.html
@@ -24,6 +24,8 @@
       <button onclick="setzeLesezeichen()">🔖 Lesezeichen setzen</button>
       <button onclick="zeigeLesezeichen()">🔖 Meine Lesezeichen</button>
       <button onclick="zurueckZurAuswahl()">📚 Zur Bücherauswahl</button>
+<div id="lesezeichen-liste" class="hidden"></div>
+
     </div>
   </div>
 
