--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
     <span id="greeting"></span>
     <a href="profil.html" title="Profil bearbeiten">👤</a>
     <button onclick="logout()">🚪 Logout</button>
+      <button onclick="fortsetzenLetztesBuch()">📖 Zuletzt gelesen fortsetzen</button>
+
   </div>
 </div>
     <main>
