--- a/bücher.html
+++ b/bücher.html
@@ -82,6 +82,8 @@
       <option value="Arabisch">Arabisch</option>
       <option value="Englisch">Englisch</option>
     </select>
+<div id="gelesene-buecher-anzeige"></div>
+<button onclick="zeigeGeleseneBuecher()">📚 Gelesene Bücher anzeigen</button>
 
     <!-- Grid-Ansicht -->
     <div id="buecher-grid" class="buch-grid">
