--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
   <div id="user-info" class="hidden">
     <span id="greeting"></span>
     <a href="profil.html" title="Profil bearbeiten">👤</a>
-    <button onclick="logout()">🚪 Logout</button>
-      <button onclick="fortsetzenLetztesBuch()">📖 Zuletzt gelesen fortsetzen</button>
-
-  </div>
+    <button onclick="logout()">🚪 Logout</button> </div></div>
+<div id="fortsetzen-container" class="hidden">
+  <button onclick="fortsetzenLetztesBuch()">📖 Zuletzt gelesenes Buch öffnen</button>
 </div>
+
     <main>
     
                 <div class="container">
