--- a/index.html
+++ b/index.html
@@ -51,13 +51,17 @@
             <li><a href="#" id="dark-mode-toggle">Dark Mode</a></li>
         </ul>
     </nav>
-    <!-- Login/Profil-Anzeige oben rechts -->
+<!-- Login/Profil-Anzeige oben rechts -->
 <div id="user-status" class="user-info">
   <a href="login.html" id="login-link">🔐 Login</a>
   <div id="user-info" class="hidden">
     <span id="greeting"></span>
     <a href="profil.html" title="Profil bearbeiten">👤</a>
-    <button onclick="logout()">🚪 Logout</button> </div></div>
+    <button onclick="logout()">🚪 Logout</button>
+  </div>
+</div>
+
+<!-- Zuletzt gelesenes Buch (nur sichtbar bei Eintrag) -->
 <div id="fortsetzen-container" class="hidden">
   <button onclick="fortsetzenLetztesBuch()">📖 Zuletzt gelesenes Buch öffnen</button>
 </div>
