--- a/bücher.html
+++ b/bücher.html
@@ -84,6 +84,14 @@
     </select>
 <div id="gelesene-buecher-anzeige"></div>
 <button onclick="zeigeGeleseneBuecher()">📚 Gelesene Bücher anzeigen</button>
+    <!-- 📌 Letztes Buch weiterlesen -->
+<div id="fortsetzen-bereich" class="fortsetzen-bereich hidden">
+  <button onclick="fortsetzenLetztesBuch()">📖 Letztes Buch weiterlesen</button>
+</div>
+
+<!-- 📌 Gelesene Bücher -->
+<div id="gelesene-buecher-anzeige" class="gelesene-buecher"></div>
+
 
     <!-- Grid-Ansicht -->
     <div id="buecher-grid" class="buch-grid">
