--- a/bücher.html
+++ b/bücher.html
@@ -8,6 +8,8 @@
   <script defer src="bücher.js"></script>
   <script type="module" src="auth.js"></script>
   <script defer src="script.js"></script>
+  <script src="reader-utils.js"></script>
+
 
 </head>
 <body>
