--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="manifest" href="manifest.json">
     <script defer src="script.js"></script>
     <script type="module" src="auth.js"></script>
+    <script src="reader-utils.js"></script>
+
 
 </head>
 <body>
