--- a/index.html
+++ b/index.html
@@ -1,73 +1,62 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usul ad-Deen</title>
-    <link rel="stylesheet" href="stylesindex.css">
-    <link rel="manifest" href="manifest.json">
-    <script defer src="script.js"></script>
-    <script type="module" src="auth.js"></script>
-    <script src="reader-utils.js"></script>
-
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Usul ad-Deen</title>
+  <link rel="stylesheet" href="stylesindex.css" />
+  <link rel="manifest" href="manifest.json" />
+  <script defer src="script.js"></script>
+  <script type="module" src="auth.js"></script>
 </head>
 <body>
 
- <h1 class="app-title">Usul ad-Deen</h1>
-         <a href="index.html">
-        <img src="icons/icon-192x192.png" alt="App Icon" class="app-icon"></a>
-    <!-- 📌 Header-Bereich mit Uhrzeit, Datum & Gebetsinfo -->
-    <div class="top-info">
-        <h2 class="startseite-text">Startseite</h2>
-        <div class="header-info">
-            <p><span id="datum">Lädt...</span> | <span id="uhrzeit">Berlin: 00:00</span></p>
-            <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
-           <p><span id="next-prayer" class="nextprayer-bold">Lädt...</span> 
-<span id="next-prayer-time"></span>
-<span id="next-prayer-countdown" class="nextprayer-bold"></span></p>
+  <h1 class="app-title">Usul ad-Deen</h1>
+  <a href="index.html">
+    <img src="icons/icon-192x192.png" alt="App Icon" class="app-icon" />
+  </a>
 
-<p><span id="current-prayer" class="nextprayer-bold">Lädt...</span> 
-<span id="current-prayer-time"></span> 
-<span id="current-prayer-countdown" class="nextprayer-bold"></span></p>
+  <div class="top-info">
+    <h2 class="startseite-text">Startseite</h2>
+    <div class="header-info">
+      <p><span id="datum">Lädt...</span> | <span id="uhrzeit">Berlin: 00:00</span></p>
+      <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
+      <p><span id="next-prayer" class="nextprayer-bold">Lädt...</span> <span id="next-prayer-countdown" class="nextprayer-bold"></span></p>
+      <p><span id="current-prayer" class="nextprayer-bold">Lädt...</span> <span id="current-prayer-countdown" class="nextprayer-bold"></span></p>
     </div>
-    </div>
-    
-
-     <!-- 📌 Navigationsmenü -->
-    <nav class="menu">
-        <button class="menu-button">☰</button>
-        <ul class="menu-list">
-            <li><a href="index.html">Startseite</a></li>
-            <li><a href="beiträge.html">Beiträge</a></li>
-            <li><a href="bücher.html">Bücher</a></li>
-            <li><a href="hadith.html">Hadithsammlung</a></li>
-            <li><a href="dua.html">Bittgebete</a></li>
-            <li><a href="gebetszeiten.html">Gebetszeiten</a></li>
-            <li><a href="kalender.html">Islamischer Kalender</a></li>
-            <li><a href="login.html">Login/Registrierung</a></li>
-            <li><a href="über-uns.html">Über uns</a></li>
-            <li><a href="kontakt.html">Kontakt</a></li>
-            <li><a href="impressum.html">Impressum & Datenschutz</a></li>
-            <li><a href="app-teilen.html">App teilen</a></li>
-            <li><a href="#" id="dark-mode-toggle">Dark Mode</a></li>
-        </ul>
-    </nav>
-<!-- Login/Profil-Anzeige oben rechts -->
-<div id="user-status" class="user-info">
-  <a href="login.html" id="login-link">🔐 Login</a>
-  <div id="user-info" class="hidden">
-    <span id="greeting"></span>
-    <a href="profil.html" title="Profil bearbeiten">👤</a>
-    <button onclick="logout()">🚪 Logout</button>
   </div>
-</div>
 
-<!-- Zuletzt gelesenes Buch (nur sichtbar bei Eintrag) -->
-<div id="fortsetzen-container" class="hidden">
-  <button onclick="fortsetzenLetztesBuch()">📖 Zuletzt gelesenes Buch öffnen</button>
-</div>
+  <nav class="menu">
+    <button class="menu-button">☰</button>
+    <ul class="menu-list">
+      <li><a href="index.html">Startseite</a></li>
+      <li><a href="beiträge.html">Beiträge</a></li>
+      <li><a href="bücher.html">Bücher</a></li>
+      <li><a href="hadith.html">Hadithsammlung</a></li>
+      <li><a href="dua.html">Bittgebete</a></li>
+      <li><a href="gebetszeiten.html">Gebetszeiten</a></li>
+      <li><a href="kalender.html">Islamischer Kalender</a></li>
+      <li><a href="login.html">Login/Registrierung</a></li>
+      <li><a href="über-uns.html">Über uns</a></li>
+      <li><a href="kontakt.html">Kontakt</a></li>
+      <li><a href="impressum.html">Impressum & Datenschutz</a></li>
+      <li><a href="app-teilen.html">App teilen</a></li>
+      <li><a href="#" id="dark-mode-toggle">Dark Mode</a></li>
+    </ul>
+  </nav>
 
+  <div id="user-status" class="user-info">
+    <a href="login.html" id="login-link">🔐 Login</a>
+    <div id="user-info" class="hidden">
+      <span id="greeting"></span>
+      <a href="profil.html" title="Profil bearbeiten">👤</a>
+      <button onclick="logout()">🚪 Logout</button>
+    </div>
+  </div>
+
+  <div id="fortsetzen-container" class="hidden">
+    <button onclick="fortsetzenLetztesBuch()">📖 Zuletzt gelesenes Buch öffnen</button>
+  </div>
     <main>
     
                 <div class="container">
