--- a/pdf-reader.html
+++ b/pdf-reader.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PDF Reader | Usul ad-Deen</title>
   <link rel="stylesheet" href="pdf-reader.css"/>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
   <script defer src="pdf-reader.js"></script>
   <script type="module" src="auth.js"></script>
-
+<!-- 📚 PDF.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+  <!-- 🧠 Firebase-Init (WICHTIG FÜR FIRESTORE) -->
+  <script type="module" src="firebase-init.js"></script>
 </head>
 <body>
   <div id="controls">
