--- a/bücher.html
+++ b/bücher.html
@@ -6,10 +6,11 @@
   <title>Bücher | Usul ad-Deen</title>
   <link rel="stylesheet" href="stylesbuecher.css"/>
   <script defer src="script.js"></script>
+  <script defer src="bücher.js"></script>
   <script src="reader-utils.js"></script>
 <script type="module" src="auth.js"></script>
 <script type="module" src="firebase-init.js"></script> <!-- Falls du es brauchst -->
-<script type="module" src="bücher.js"></script>
+
 
 
 </head>
