--- a/bücher.html
+++ b/bücher.html
@@ -5,11 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Bücher | Usul ad-Deen</title>
   <link rel="stylesheet" href="stylesbuecher.css"/>
-  <script defer src="script.js"></script>
-  <script defer src="bücher.js"></script>
-  <script src="reader-utils.js"></script>
+<!-- Wichtige Scripts am Ende laden -->
+<script defer src="script.js"></script>
+<script defer src="reader-utils.js"></script>
+<script defer src="bücher.js"></script>
+<!-- Module erst ganz zuletzt -->
+<script type="module" src="firebase-init.js"></script>
 <script type="module" src="auth.js"></script>
-<script type="module" src="firebase-init.js"></script> <!-- Falls du es brauchst -->
 
 
 
